# django-docker

./: .gitignore  README.md  build_cmd.sh  build_server.sh  clear_db.sh  django-docker.code-workspace.org  get_random_secret_key.py  pyproject.toml  pytest.ini  requirements.txt  run_cmd_01.sh  run_cmd_02.sh  run_server_01.sh  run_server_02.sh  update_requirements.sh
apps/main/: apps.py  models.py  urls.py  views.py
apps/main/management/commands/: increment.py
apps/main/migrations/: 0001_initial.py  0002_alter_countdata_id.py
apps/main/templates/main/: increment.html
core/: asgi.py  base_settings.py  local_settings.py.docker  local_settings.py.org  settings.py  settings_for_pytest.py  urls.py  wsgi.py
dockerfiles/: Dockerfile.cmd  Dockerfile.server
templates/: base.html
